--- a/fully-youtube-app/src/_base.scss
+++ b/fully-youtube-app/src/_base.scss
@@ -1,11 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 
-$text-color: #b1bdb1;
-
-$black-primary: #16181b;
+$text-color: #b1bdb4;
 $black-secondary: #121417;
+$black-primary: #16181b;
 $border-color: #4c4c4c;
-
 $breakpoint-medium: 1224px;
 $breakpoint-small: 520px;
 
@@ -14,12 +12,13 @@ $breakpoint-small: 520px;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   background: $black-primary;
-  background-attachment: fixed;
   color: $text-color;
+  background-attachment: fixed;
+  font-family: "Roboto" sans-serif;
   letter-spacing: 0.1px;
-  font-family: "Roboto", sans-serif;
 }
 
 @mixin line-clamp($number) {
@@ -28,6 +27,7 @@ body {
   -webkit-line-clamp: $number;
   -webkit-box-orient: vertical;
 }
+
 ::-webkit-scrollbar {
   width: 0px;
 }
