--- a/fully-youtube-app/src/components/categoriesBar/_categoriesBar.scss
+++ b/fully-youtube-app/src/components/categoriesBar/_categoriesBar.scss
@@ -1,12 +1,12 @@
 @import "../../base.scss";
 
-.categoriesBar {
-  font-size: 0.8rem;
+.categoriesaBar {
   padding: 0.5rem 0;
+  font-size: 0.8rem;
   display: flex;
   overflow-x: scroll;
 
-  &::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 0px;
   }
   scrollbar-width: none;
@@ -14,17 +14,16 @@
   span {
     margin-right: 1rem;
     padding: 0.5rem;
-
     white-space: nowrap;
-    border: 1px solid $text-color;
+    border: 1.5px solid $text-color;
     border-radius: 999px;
-    transition: 0.3s ease-in-out;
+    transition: 0.5s ease-in;
 
     &:hover {
       background: #374a59;
     }
     &.active {
-      color: #ffff;
+      color: #fff;
       background: #606060;
       border-color: $border-color;
     }
