--- a/fully-youtube-app/src/components/header/_header.scss
+++ b/fully-youtube-app/src/components/header/_header.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 3rem;
-  background: $black-primary;
+  background: $black-secondary;
   height: 10vh;
   width: 100%;
 
@@ -18,33 +18,33 @@
     object-fit: contain;
     display: block;
   }
+
   form {
     flex: 0.6;
     display: flex;
     padding: 0.1rem;
     margin: 0.1rem;
-    border: 1px solid;
-    background: $black-secondary;
     border-radius: 3px;
+    border: 1.2px solid;
+    background: $black-secondary;
 
     input {
       width: 100%;
       border: none;
-      font-weight: 500;
       background: transparent;
       padding: 0.3rem;
       color: $text-color;
-      font-size: 18px;
-
+      font-weight: 500;
       &:focus {
         outline: none;
       }
     }
     button {
       padding: 0 1.25rem;
-      background: transparent;
       color: $text-color;
+      background: transparent;
       border: none;
+
       &:focus {
         border: none;
       }
@@ -53,7 +53,7 @@
   &_icons {
     flex: 0.15;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 
     img {
@@ -77,7 +77,6 @@
     }
     &_menu {
       display: block;
-      margin-right: 0.9rem;
     }
     &_icons *:not(img) {
       display: none;
