--- a/fully-youtube-app/src/components/sidebar/_sidebar.scss
+++ b/fully-youtube-app/src/components/sidebar/_sidebar.scss
@@ -1,15 +1,16 @@
 @import "../../_base.scss";
 .sidebar {
   background: $black-primary;
+  flex-basis: 15.7%;
   display: flex;
   flex-direction: column;
   width: 250px;
   height: 90vh;
   padding-top: 2rem;
   transition: transform 0.3s ease-in-out;
-  position: fixed;
-  top: rem;
-  z-index: 999;
+  // position: fixed;
+  // top: rem;
+  // z-index: 999;
 
   li {
     // display: flex;
