--- a/fully-youtube-app/src/_base.scss
+++ b/fully-youtube-app/src/_base.scss
@@ -8,8 +8,8 @@ $breakpoint-medium: 1224px;
 $breakpoint-small: 520px;
 
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
 
