--- a/fully-youtube-app/src/components/header/_header.scss
+++ b/fully-youtube-app/src/components/header/_header.scss
@@ -8,6 +8,9 @@
   background: $black-secondary;
   height: 10vh;
   width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 400;
 
   &_menu {
     display: none;
