--- a/fully-youtube-app/src/components/videos/_videos.scss
+++ b/fully-youtube-app/src/components/videos/_videos.scss
@@ -2,7 +2,7 @@
 
 .video {
   margin-bottom: 1rem;
-  padding: 0.7rem;
+  // padding: 0.rem;
   font-weight: 500;
   font-size: 0.9rem;
   cursor: pointer;
@@ -13,6 +13,11 @@
 
     img {
       width: 100%;
+      border-radius: 17px;
+      transition: 0.3s;
+    }
+    img:hover {
+      border-radius: 0px;
     }
     span {
       position: absolute;
