--- a/fully-youtube-app/src/components/videos/_videos.scss
+++ b/fully-youtube-app/src/components/videos/_videos.scss
@@ -2,10 +2,11 @@
 
 .video {
   margin-bottom: 1rem;
-  // padding: 0.rem;
+  // padding: 0rem;
   font-weight: 500;
   font-size: 0.9rem;
   cursor: pointer;
+  // padding-left: 10px;
 
   &_top {
     margin-bottom: 0.5rem;
