--- a/fully-youtube-app/src/components/sidebar/_sidebar.scss
+++ b/fully-youtube-app/src/components/sidebar/_sidebar.scss
@@ -1,15 +1,16 @@
 @import "../../_base.scss";
 .sidebar {
-  background: $black-primary;
-  flex-basis: 15.7%;
+  background: $black-secondary;
+  // flex-basis: 10%;
   display: flex;
   flex-direction: column;
   width: 250px;
   height: 90vh;
   padding-top: 0.9rem;
   transition: transform 0.3s ease-in-out;
-  position: fixed;
-  top: 10vh;
+  position: sticky;
+  top: 9vh;
+  left: 0;
   z-index: 999;
 
   li {
