--- a/fully-youtube-app-fail/src/components/videoMetaData/_videoMetaData.scss
+++ b/fully-youtube-app-fail/src/components/videoMetaData/_videoMetaData.scss
@@ -15,7 +15,9 @@
     img {
       width: 50px;
       height: 50px;
+      margin-right: 10px !important;
     }
+
     button {
       background: red;
       color: #fff;
@@ -30,6 +32,10 @@
         outline: none;
       }
     }
+  }
+  .show-more {
+    color: #fff;
+    cursor: pointer;
   }
   &_description {
     font-size: 0.9rem;
