trying other api

--- a/youtube-app/src/components/videoMetaData/_videoMetaData.scss
+++ b/youtube-app/src/components/videoMetaData/_videoMetaData.scss
@@ -24,6 +24,10 @@
       text-transform: uppercase;
       letter-spacing: 0.5px;
       border-radius: none;
+
+      &.btn-gray {
+        background: gray;
+      }
       &:hover {
         color: #fff;
       }
