--- a/adimin-dashboard-app/src/index.css
+++ b/adimin-dashboard-app/src/index.css
@@ -14,7 +14,7 @@ body,
   position: relative;
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  display: none;
 }
 ::-webkit-scrollbar-track {
   background: #0e0e0e;
