--- a/ChartApp/src/components/details/details.css
+++ b/ChartApp/src/components/details/details.css
@@ -1,3 +1,100 @@
 .details {
   flex: 1;
+  /* overflow-y: scroll; */
+
+  .user {
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1 0px;
+    border-bottom: 1px solid #dddddd35;
+
+    img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+    p {
+      font-weight: 400;
+      color: #c2bcbcfb;
+      font-size: 14px;
+    }
+  }
+  .info {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+
+    .option {
+      .title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        img {
+          width: 30px;
+          height: 30px;
+          object-fit: cover;
+          border-radius: 50%;
+          background-color: rgba(17, 20, 40, 0.6);
+          cursor: pointer;
+          padding: 10px;
+        }
+      }
+      .photos {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        .photoItem {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          .photoDetails {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+
+            img {
+              width: 40px;
+              height: 40px;
+              object-fit: cover;
+              border-radius: 5px;
+            }
+            span {
+              font-size: 13px;
+              color: #a3a3a3fb;
+              font-weight: 300;
+            }
+          }
+          .icon {
+            width: 30px;
+            height: 30px;
+            object-fit: cover;
+            border-radius: 50%;
+            background-color: rgba(17, 20, 40, 0.6);
+            cursor: pointer;
+            padding: 10px;
+          }
+        }
+      }
+    }
+    button {
+      padding: 10px 20px;
+      border-radius: 10px;
+      background-color: rgba(230, 74, 105, 0.534);
+      border: none;
+      outline: none;
+      color: #fff;
+      cursor: pointer;
+      transition: 0.3s;
+
+      &:hover {
+        background-color: rgba(230, 74, 105, 0.9);
+      }
+    }
+  }
 }
