--- a/ChartApp/src/index.css
+++ b/ChartApp/src/index.css
@@ -23,3 +23,14 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.125);
   display: flex;
 }
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(17, 25, 40, 0.75);
+  border-radius: 10px;
+}
