--- a/ChartApp/src/components/login/login.css
+++ b/ChartApp/src/components/login/login.css
@@ -54,6 +54,12 @@
         background-color: #1f8ef1;
         color: #fff;
         cursor: pointer;
+
+        &:disabled {
+          background-color: #1f8ff19c;
+          color: #fff;
+          cursor: not-allowed;
+        }
       }
     }
   }
