--- a/ChartApp/src/components/list/chatList/addUser/addUser.css
+++ b/ChartApp/src/components/list/chatList/addUser/addUser.css
@@ -20,7 +20,7 @@
       border-radius: 10px;
       border: none;
       outline: none;
-      color: #fff;
+      color: #000;
       padding: 20px;
     }
     button {
