--- a/ChartApp/src/components/chats/chats.css
+++ b/ChartApp/src/components/chats/chats.css
@@ -64,26 +64,27 @@
       max-width: 70%;
       display: flex;
       gap: 20px;
+      align-self: flex-start;
 
       &.own {
         align-self: flex-end;
+      }
 
-        .texts {
-          img {
-            width: 100%;
-            height: 300px;
-            object-fit: cover;
-            border-radius: 10px;
-          }
-          p {
-            background-color: #5183fe;
-            padding: 20px;
-            border-radius: 10px;
-          }
-          span {
-            font-size: 13px;
-            color: #a3a3a3fb;
-          }
+      .texts {
+        img {
+          width: 100%;
+          height: 300px;
+          object-fit: cover;
+          border-radius: 10px;
+        }
+        p {
+          background-color: #5183fe;
+          padding: 20px;
+          border-radius: 10px;
+        }
+        span {
+          font-size: 13px;
+          color: #a3a3a3fb;
         }
       }
 
@@ -98,6 +99,7 @@
         display: flex;
         flex-direction: column;
         gap: 5px;
+
         p {
           background-color: rgba(17, 25, 40, 0.3);
           padding: 20px;
@@ -134,6 +136,11 @@
       padding: 10px;
       font-size: 14px;
       border-radius: 10px;
+
+      &:disabled {
+        cursor: not-allowed;
+        background-color: rgba(17, 25, 40, 0.418);
+      }
     }
     img {
       width: 20px;
@@ -147,6 +154,11 @@
       border: none;
       outline: none;
       color: #fff;
+      cursor: pointer;
+      &:disabled {
+        cursor: not-allowed;
+        background-color: #5182fead;
+      }
     }
     .emoji {
       position: relative;
